tools migrated to sub-header menu, and off project-nav menu

--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -2,9 +2,32 @@
 
 <!-- BEGIN CONTENT-->
 <div id="content">
-  <div class="col-xs-offset-3 col-xs-9">
+  <div class="row">
+    <div id="col-xs-offset-3 col-xs-9">
+      <div class='col-xs-12' style="background-color: #ffffff; height: 47px; padding: 5px; padding-right: 20px; ">
+        <!--<div class="headerbar-left">-->
 
-    <button class="btn btn-default" (click)="addToast('title', 'this is a longer message I want to see what will happen with the size of the element message!')">click!</button>
+        <!--<div id="headerbar-left" class="pull-right" style="padding: 5px;">-->
+
+          <div class="col-xs-1 pull-right">
+            <button class="btn btn-default-bright ink-reaction" style="padding: 5px; width: 100%; border: none;">
+              <span class="tool-title">
+                <i class="fa fa-gear fa-lg pull-left"></i>
+                A.P.C.
+              </span>
+            </button>
+          </div>
+          <div class="col-xs-1 pull-right">
+            <button class="btn btn-default-bright ink-reaction" style="padding: 5px; width: 100%; border: none;">
+              <span class="tool-title" >
+                <i class="fa fa-gear fa-lg pull-left"></i>
+                S.F.
+              </span>
+            </button>
+          </div>
+        <!--</div>-->
+      </div>
+    </div>
   </div>
 </div>
 
