--- a/kontext/src/assets/less/materialadmin/header.less
+++ b/kontext/src/assets/less/materialadmin/header.less
@@ -188,7 +188,7 @@
 			border-left: 1px solid transparent;
 			border-right: 1px solid transparent;
 
-			&:after { 
+			&:after {
 				content: "\f107";
 				position: absolute;
 				*margin-right: .3em;
@@ -283,11 +283,11 @@
 // Large Devices only
 // -------------------------
 
-@media (min-width: @screen-lg-min) { 
+@media (min-width: @screen-lg-min) {
 	.menubar-first {
 		&.menubar-pin {
 			.header-nav {
-				// Hide the header brand when the menu is both pinnen and first
+				// Hide the header brand when the menu is both pinned and first
 				.header-nav-brand {
 					display: none;
 				}
@@ -304,7 +304,7 @@
 // Medium and Large Devices
 // -------------------------
 
-@media (min-width: (@screen-sm-min)) { 
+@media (min-width: (@screen-sm-min)) {
 	.menubar-first {
 		// Hide the menu tggler when the menu is first
 		#header .menubar-toggle {
@@ -318,7 +318,7 @@
 
 		&.menubar-pin {
 			.header-nav {
-				// Hide the header brand when the menu is both pinnen and first
+				// Hide the header brand when the menu is both pinned and first
 				.header-nav-brand {
 					//display: none;
 				}
@@ -379,7 +379,7 @@
 
 	.headerbar-right {
 		position: absolute;
-		left: 0; 
+		left: 0;
 		right: 0;
 		min-height: @headerbar-height;
 		top: @headerbar-height;
@@ -409,7 +409,7 @@
 			}
 		}
 	}
-	
+
 	// Left header bar
 	// ---------------------------
 
