--- a/kontext/src/app/base/base.component.html
+++ b/kontext/src/app/base/base.component.html
@@ -5,6 +5,259 @@
 
   <!-- BEGIN MENUBAR-->
   <app-menu></app-menu>
+  <!--<div id="menubar" class="menubar-inverse  animate">-->
+				<!--<div class="menubar-fixed-panel">-->
+					<!--<div>-->
+						<!--<a class="btn btn-icon-toggle btn-default menubar-toggle" data-toggle="menubar" href="javascript:void(0);">-->
+							<!--<i class="fa fa-bars"></i>-->
+						<!--</a>-->
+					<!--</div>-->
+					<!--<div class="expanded">-->
+						<!--<a href="../../html/dashboards/dashboard.html">-->
+							<!--<span class="text-lg text-bold text-primary ">MATERIAL&nbsp;ADMIN</span>-->
+						<!--</a>-->
+					<!--</div>-->
+				<!--</div>-->
+				<!--<div class="nano has-scrollbar" style="height: 87px;"><div class="nano-content" tabindex="0" style="right: -15px;"><div class="menubar-scroll-panel" style="padding-bottom: 55px;">-->
+
+					<!--&lt;!&ndash; BEGIN MAIN MENU &ndash;&gt;-->
+					<!--<ul id="main-menu" class="gui-controls">-->
+
+						<!--&lt;!&ndash; BEGIN DASHBOARD &ndash;&gt;-->
+						<!--<li>-->
+							<!--<a href="../../html/dashboards/dashboard.html">-->
+								<!--<div class="gui-icon"><i class="md md-home"></i></div>-->
+								<!--<span class="title">Dashboard</span>-->
+							<!--</a>-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END DASHBOARD &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN EMAIL &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><i class="md md-email"></i></div>-->
+								<!--<span class="title">Email</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li><a href="../../html/mail/inbox.html"><span class="title">Inbox</span></a></li>-->
+								<!--<li><a href="../../html/mail/compose.html"><span class="title">Compose</span></a></li>-->
+								<!--<li><a href="../../html/mail/reply.html"><span class="title">Reply</span></a></li>-->
+								<!--<li><a href="../../html/mail/message.html"><span class="title">View message</span></a></li>-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END EMAIL &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN DASHBOARD &ndash;&gt;-->
+						<!--<li class="active expanded expanding">-->
+							<!--<a href="../../html/layouts/builder.html" class="active">-->
+								<!--<div class="gui-icon"><i class="md md-web"></i></div>-->
+								<!--<span class="title">Layouts</span>-->
+							<!--</a>-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END DASHBOARD &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN UI &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><i class="fa fa-puzzle-piece fa-fw"></i></div>-->
+								<!--<span class="title">UI elements</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li><a href="../../html/ui/colors.html"><span class="title">Colors</span></a></li>-->
+								<!--<li><a href="../../html/ui/typography.html"><span class="title">Typography</span></a></li>-->
+								<!--<li><a href="../../html/ui/cards.html"><span class="title">Cards</span></a></li>-->
+								<!--<li><a href="../../html/ui/buttons.html"><span class="title">Buttons</span></a></li>-->
+								<!--<li><a href="../../html/ui/lists.html"><span class="title">Lists</span></a></li>-->
+								<!--<li><a href="../../html/ui/tabs.html"><span class="title">Tabs</span></a></li>-->
+								<!--<li><a href="../../html/ui/accordions.html"><span class="title">Accordions</span></a></li>-->
+								<!--<li><a href="../../html/ui/messages.html"><span class="title">Messages</span></a></li>-->
+								<!--<li><a href="../../html/ui/offcanvas.html"><span class="title">Off-canvas</span></a></li>-->
+								<!--<li><a href="../../html/ui/grid.html"><span class="title">Grid</span></a></li>-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Icons</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="../../html/ui/icons/materialicons.html"><span class="title">Material Design Icons</span></a></li>-->
+										<!--<li><a href="../../html/ui/icons/fontawesome.html"><span class="title">Font Awesome</span></a></li>-->
+										<!--<li><a href="../../html/ui/icons/glyphicons.html"><span class="title">Glyphicons</span></a></li>-->
+										<!--<li><a href="../../html/ui/icons/skycons.html"><span class="title">Skycons</span></a></li>-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END UI &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN TABLES &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><i class="fa fa-table"></i></div>-->
+								<!--<span class="title">Tables</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li><a href="../../html/tables/static.html"><span class="title">Static Tables</span></a></li>-->
+								<!--<li><a href="../../html/tables/dynamic.html"><span class="title">Dynamic Tables</span></a></li>-->
+								<!--<li><a href="../../html/tables/responsive.html"><span class="title">Responsive Table</span></a></li>-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END TABLES &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN FORMS &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>-->
+								<!--<span class="title">Forms</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li><a href="../../html/forms/basic.html"><span class="title">Form basic</span></a></li>-->
+								<!--<li><a href="../../html/forms/advanced.html"><span class="title">Form advanced</span></a></li>-->
+								<!--<li><a href="../../html/forms/layouts.html"><span class="title">Form layouts</span></a></li>-->
+								<!--<li><a href="../../html/forms/editors.html"><span class="title">Editors</span></a></li>-->
+								<!--<li><a href="../../html/forms/validation.html"><span class="title">Form validation</span></a></li>-->
+								<!--<li><a href="../../html/forms/wizard.html"><span class="title">Form wizard</span></a></li>-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END FORMS &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN PAGES &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><i class="md md-computer"></i></div>-->
+								<!--<span class="title">Pages</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Contacts</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="../../html/pages/contacts/search.html"><span class="title">Search</span></a></li>-->
+										<!--<li><a href="../../html/pages/contacts/details.html"><span class="title">Contact card</span></a></li>-->
+										<!--<li><a href="../../html/pages/contacts/add.html"><span class="title">Insert contact</span></a></li>-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Search</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="../../html/pages/search/results-text.html"><span class="title">Results - Text</span></a></li>-->
+										<!--<li><a href="../../html/pages/search/results-text-image.html"><span class="title">Results - Text and Image</span></a></li>-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Blog</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="../../html/pages/blog/masonry.html"><span class="title">Blog masonry</span></a></li>-->
+										<!--<li><a href="../../html/pages/blog/list.html"><span class="title">Blog list</span></a></li>-->
+										<!--<li><a href="../../html/pages/blog/post.html"><span class="title">Blog post</span></a></li>-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Error pages</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="../../html/pages/404.html"><span class="title">404 page</span></a></li>-->
+										<!--<li><a href="../../html/pages/500.html"><span class="title">500 page</span></a></li>-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+								<!--<li><a href="../../html/pages/profile.html"><span class="title">User profile<span class="badge style-accent">42</span></span></a></li>-->
+								<!--<li><a href="../../html/pages/invoice.html"><span class="title">Invoice</span></a></li>-->
+								<!--<li><a href="../../html/pages/calendar.html"><span class="title">Calendar</span></a></li>-->
+								<!--<li><a href="../../html/pages/pricing.html"><span class="title">Pricing</span></a></li>-->
+								<!--<li><a href="../../html/pages/timeline.html"><span class="title">Timeline</span></a></li>-->
+								<!--<li><a href="../../html/pages/maps.html"><span class="title">Maps</span></a></li>-->
+								<!--<li><a href="../../html/pages/locked.html"><span class="title">Lock screen</span></a></li>-->
+								<!--<li><a href="../../html/pages/login.html"><span class="title">Login</span></a></li>-->
+								<!--<li><a href="../../html/pages/blank.html"><span class="title">Blank page</span></a></li>-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END FORMS &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN CHARTS &ndash;&gt;-->
+						<!--<li>-->
+							<!--<a href="../../html/charts/charts.html">-->
+								<!--<div class="gui-icon"><i class="md md-assessment"></i></div>-->
+								<!--<span class="title">Charts</span>-->
+							<!--</a>-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END CHARTS &ndash;&gt;-->
+
+						<!--&lt;!&ndash; BEGIN LEVELS &ndash;&gt;-->
+						<!--<li class="gui-folder">-->
+							<!--<a>-->
+								<!--<div class="gui-icon"><i class="fa fa-folder-open fa-fw"></i></div>-->
+								<!--<span class="title">Menu levels demo</span>-->
+							<!--</a>-->
+							<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+							<!--<ul style="">-->
+								<!--<li><a href="#"><span class="title">Item 1</span></a></li>-->
+								<!--<li><a href="#"><span class="title">Item 1</span></a></li>-->
+								<!--<li class="gui-folder">-->
+									<!--<a href="javascript:void(0);">-->
+										<!--<span class="title">Open level 2</span>-->
+									<!--</a>-->
+									<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+									<!--<ul>-->
+										<!--<li><a href="#"><span class="title">Item 2</span></a></li>-->
+										<!--<li class="gui-folder">-->
+											<!--<a href="javascript:void(0);">-->
+												<!--<span class="title">Open level 3</span>-->
+											<!--</a>-->
+											<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+											<!--<ul>-->
+												<!--<li><a href="#"><span class="title">Item 3</span></a></li>-->
+												<!--<li><a href="#"><span class="title">Item 3</span></a></li>-->
+												<!--<li class="gui-folder">-->
+													<!--<a href="javascript:void(0);">-->
+														<!--<span class="title">Open level 4</span>-->
+													<!--</a>-->
+													<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+													<!--<ul>-->
+														<!--<li><a href="#"><span class="title">Item 4</span></a></li>-->
+														<!--<li class="gui-folder">-->
+															<!--<a href="javascript:void(0);">-->
+																<!--<span class="title">Open level 5</span>-->
+															<!--</a>-->
+															<!--&lt;!&ndash;start submenu &ndash;&gt;-->
+															<!--<ul>-->
+																<!--<li><a href="#"><span class="title">Item 5</span></a></li>-->
+																<!--<li><a href="#"><span class="title">Item 5</span></a></li>-->
+															<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+														<!--</li>&lt;!&ndash;end /submenu-li &ndash;&gt;-->
+													<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+												<!--</li>&lt;!&ndash;end /submenu-li &ndash;&gt;-->
+											<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+										<!--</li>&lt;!&ndash;end /submenu-li &ndash;&gt;-->
+									<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+								<!--</li>&lt;!&ndash;end /submenu-li &ndash;&gt;-->
+							<!--</ul>&lt;!&ndash;end /submenu &ndash;&gt;-->
+						<!--</li>&lt;!&ndash;end /menu-li &ndash;&gt;-->
+						<!--&lt;!&ndash; END LEVELS &ndash;&gt;-->
+
+					<!--</ul>&lt;!&ndash;end .main-menu &ndash;&gt;-->
+					<!--&lt;!&ndash; END MAIN MENU &ndash;&gt;-->
+
+					<!--<div class="menubar-foot-panel">-->
+						<!--<small class="no-linebreak hidden-folded">-->
+							<!--<span class="opacity-75">Copyright © 2014</span> <strong>CodeCovers</strong>-->
+						<!--</small>-->
+					<!--</div>-->
+				<!--</div></div><div class="nano-pane" style="display: block;"><div class="nano-slider" style="height: 20px; transform: translate(0px, 0px);"></div></div></div>&lt;!&ndash;end .menubar-scroll-panel&ndash;&gt;-->
+			<!--</div>-->
 
   <!-- BEGIN CONTENT & OFF-CANVAS FILTER HTML-->
   <app-content></app-content>
