--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -6,9 +6,6 @@
   <!--</div>-->
   <div class="menubar-fixed-panel">
       <div>
-        <!--<a class="btn btn-icon-toggle btn-default menubar-toggle" data-toggle="menubar" href="javascript:void(0);">-->
-          <!--<i class="fa fa-bars"></i>-->
-        <!--</a>-->
       </div>
       <div class="expanded">
         <a href="#">
@@ -20,43 +17,14 @@
     </div>
   <div>
     <ul id="main-menu" class="gui-controls" style="margin-bottom: -15px;">
-      <li>
-        <button class="btn btn-primary-dark ink-reaction" style="width: 100%">
-            <span class="primary-menu-label">
-              <i class="fa fa-home"></i>
-              Home
-            </span>
-        </button>
-      </li>
       <!--<li>-->
-          <!--<button class="btn btn-primary-dark ink-reaction" style="width: 100%" (click)="toggleTools()">-->
+        <!--<button class="btn btn-primary-dark ink-reaction" style="width: 100%">-->
             <!--<span class="primary-menu-label">-->
-              <!--<i class="fa fa-wrench"></i>-->
-              <!--Tools-->
+              <!--<i class="fa fa-home"></i>-->
+              <!--Home-->
             <!--</span>-->
-          <!--</button>-->
+        <!--</button>-->
       <!--</li>-->
-      <!--<div *ngIf="showTools">-->
-        <!--<ul id="tool-menu" class="gui-controls" style="margin-top: -15px;">-->
-          <!--<li style="margin: 0">-->
-            <!--<button class="btn btn-default-bright ink-reaction" style="width: 100%">-->
-              <!--<span class="tool-title">-->
-                <!--<i class="fa fa-gear fa-lg pull-left" style="margin-left: 15px;"></i>-->
-                <!--Air Perm Calculator-->
-              <!--</span>-->
-            <!--</button>-->
-          <!--</li>-->
-          <!--<li style="margin: 0">-->
-            <!--<button class="btn btn-default-bright ink-reaction" style="width: 100%">-->
-              <!--<span class="tool-title" >-->
-                <!--<i class="fa fa-gear fa-lg pull-left" style="margin-left: 15px;"></i>-->
-                <!--Safety-Factor Calculator-->
-              <!--</span>-->
-            <!--</button>-->
-          <!--</li>-->
-        <!--</ul>-->
-      <!--</div>-->
-
       <li>
           <button class="btn btn-primary-dark ink-reaction" style="width: 100%" (click)="toggleProjects()">
             <span class="primary-menu-label">
@@ -66,8 +34,23 @@
 
     </ul>
 
-    <div *ngIf="showProjectTree()">
+    <!--<div *ngIf="showProjectTree()">-->
+    <div *ngIf="nestedDataSource.data">
       <ul id="project-menu" class="gui-controls" style="margin-bottom: -15px;">
+        <li style="margin: 0">
+          <button class="btn btn-accent-light ink-reaction"
+                  style="width: 100%;
+                  border-top: 1px solid #0c0c0c;
+                  border-right: 1px solid #0c0c0c;
+                  border-left: 1px solid #0c0c0c;"
+                  data-toggle="modal" data-target="#formModal">
+
+            <span class="tool-title">
+              <i class="fa fa-plus fa-lg"></i>
+              New Project
+            </span>
+          </button>
+        </li>
         <li style="margin: 0">
           <button *ngIf="emptyParams()" class="btn btn-default ink-reaction"
                   style="width: 100%;border: 1px solid #0c0c0c;" (click)="toggleFilter()">
@@ -155,7 +138,6 @@
           <span class="title menu-label" *ngIf="node.type == 'spec'" [contextMenu]="specMenu" [contextMenuSubject]="node">{{node.name}}</span>
         </li>
       </mat-tree-node>
-    <!---->
       <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
         <li>
           <div class="mat-tree-node" style="margin-left: 35px;">
@@ -196,6 +178,38 @@
                 {{node.name}}
               </span>
 
+              <!-- DESIGN -->
+              <span class="title menu-label"
+                    [contextMenu]="designMenu"
+                    [contextMenuSubject]="node"
+                    *ngIf="nestedTreeControl.isExpanded(node) && node.type == 'design'"
+                    style="color: #f31f32; font-weight: normal;">
+                {{node.name}}
+              </span>
+              <span class="title menu-label"
+                    [contextMenu]="designMenu"
+                    [contextMenuSubject]="node"
+                    *ngIf="!nestedTreeControl.isExpanded(node) && node.type == 'design'"
+                    style="color: #d1d1d1;">
+                {{node.name}}
+              </span>
+
+              <!-- SPEC -->
+              <span class="title menu-label"
+                    [contextMenu]="specMenu"
+                    [contextMenuSubject]="node"
+                    *ngIf="nestedTreeControl.isExpanded(node) && node.type == 'spec'"
+                    style="color: #f31f32; font-weight: normal;">
+                {{node.name}}
+              </span>
+              <span class="title menu-label"
+                    [contextMenu]="specMenu"
+                    [contextMenuSubject]="node"
+                    *ngIf="!nestedTreeControl.isExpanded(node) && node.type == 'spec'"
+                    style="color: #d1d1d1;">
+                {{node.name}}
+              </span>
+
             </a>
           </div>
           <ul [class.example-tree-invisible]="!nestedTreeControl.isExpanded(node)">
@@ -204,9 +218,8 @@
         </li>
       </mat-nested-tree-node>
     </mat-tree>
-    <hr class="style-one">
+    <!--<hr class="style-one">-->
     </div>
-    <hr class="style-one">
 
 
     <!--CONTEXT MENUS -->
@@ -290,6 +303,82 @@
                    [enabled]="true"
                    (execute)="showMessage('Create', $event.item)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #319644">DESIGN</span>
+      </ng-template>
+</context-menu>
+    <context-menu #designMenu>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Expanding Project', $event.item)">
+        <i class="fa fa-expand">&nbsp;</i> Expand
+      </ng-template>
+      <ng-template contextMenuItem [divider]="true"></ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Edit', $event.item)">
+        <i class="fa fa-edit">&nbsp;</i> Edit
+      </ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Delete', $event.item)">
+        <i class="fa fa-trash">&nbsp;</i> Delete
+      </ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showCopyMessage('Copy', $event.item)">
+        <a data-position="toast-top-full-width"></a>
+        <i class="fa fa-copy">&nbsp;</i> Copy
+      </ng-template>
+      <ng-template contextMenuItem [divider]="true"></ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Create', $event.item)">
+        <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #319644">DESIGN</span>
+      </ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Create', $event.item)">
+        <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #a84ba3">SPEC</span>
+      </ng-template>
+</context-menu>
+    <context-menu #specMenu>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Expanding Project', $event.item)">
+        <i class="fa fa-expand">&nbsp;</i> Expand
+      </ng-template>
+      <ng-template contextMenuItem [divider]="true"></ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Edit', $event.item)">
+        <i class="fa fa-edit">&nbsp;</i> Edit
+      </ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Delete', $event.item)">
+        <i class="fa fa-trash">&nbsp;</i> Delete
+      </ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showCopyMessage('Copy', $event.item)">
+        <a data-position="toast-top-full-width"></a>
+        <i class="fa fa-copy">&nbsp;</i> Copy
+      </ng-template>
+      <ng-template contextMenuItem [divider]="true"></ng-template>
+      <ng-template contextMenuItem
+                   [visible]="true"
+                   [enabled]="true"
+                   (execute)="showMessage('Create', $event.item)">
+        <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #a84ba3">SPEC</span>
       </ng-template>
 </context-menu>
 
