adding crud -> forms with some pointers, need to flesh the html out and the controls

--- a/kontext/src/app/crud/crud.component.html
+++ b/kontext/src/app/crud/crud.component.html
@@ -1,3 +1,4 @@
-<p>
-  crud works!
-</p>
+<project-crud></project-crud>
+<!--<phase-crud></phase-crud>-->
+<!--<design-crud></design-crud>-->
+<!--<spec-crud></spec-crud>-->
