--- a/kontext/src/app/base/base.component.html
+++ b/kontext/src/app/base/base.component.html
@@ -9,84 +9,6 @@
   <!-- BEGIN CONTENT & OFF-CANVAS FILTER HTML-->
   <app-content></app-content>
 
-  <div class="modal fade"
-       id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
-       aria-hidden="true" style="display: none;">
-	<div class="modal-dialog modal-lg">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title" id="formModalLabel">Login to continue</h4>
-			</div>
-			<form class="form-horizontal" role="form">
-				<div class="modal-body">
-					<div class="form-group">
-						<div class="col-sm-3">
-							<label for="pr_name" class="control-label">Name: </label>
-						</div>
-						<div class="col-sm-9">
-							<input type="text" name="project_name" id="pr_name" class="form-control" placeholder="Project Name">
-              <div class="form-control-line"></div>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-3">
-							<label for="pr_number" class="control-label">Number</label>
-						</div>
-						<div class="col-sm-9">
-							<input type="number" name="pr_number" id="pr_number" class="form-control" placeholder="Project Number">
-              <div class="form-control-line"></div>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-3">
-              <label for="pr_type" class="control-label">Project Type</label>
-						</div>
-						<div class="col-sm-9">
-              <select name="pr_type" class="form-control" id="pr_type">
-                <option> &nbsp;</option>
-                <option>Replacement</option>
-                <option>OE</option>
-                <option>Research</option>
-              </select>
-						</div>
-					</div>
-          <div class="form-group">
-						<div class="col-sm-3">
-							<label for="description" class="control-label">Description: </label>
-						</div>
-						<div class="col-sm-9">
-							<input type="text" name="description" id="description" class="form-control" placeholder="Description">
-              <div class="form-control-line"></div>
-						</div>
-					</div>
-          <div class="form-group">
-						<div class="col-sm-3">
-							<label for="customer" class="control-label">Customer: </label>
-						</div>
-						<div class="col-sm-9">
-							<input type="text" name="customer" id="customer" class="form-control" placeholder="Customer">
-              <div class="form-control-line"></div>
-						</div>
-					</div>
-          <div class="form-group">
-						<div class="col-sm-3">
-							<label for="tag" class="control-label">Tag: </label>
-						</div>
-						<div class="col-sm-9">
-							<input type="text" name="tag" id="tag" class="form-control" placeholder="Tag">
-              <div class="form-control-line"></div>
-						</div>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-primary">Login</button>
-				</div>
-			</form>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div>
-
-
+  <!--CRUD FORMS-->
+  <app-crud></app-crud>
 </div>
