--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -43,7 +43,7 @@
                   border-top: 1px solid #0c0c0c;
                   border-right: 1px solid #0c0c0c;
                   border-left: 1px solid #0c0c0c;"
-                  data-toggle="modal" data-target="#formModal">
+                  data-toggle="modal" data-target="#projectCreateModal">
 
             <span class="tool-title">
               <i class="fa fa-plus fa-lg"></i>
@@ -234,33 +234,26 @@
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Edit', $event.item)">
+                   (execute)="editItem($event.item)">
         <i class="fa fa-edit">&nbsp;</i> Edit
       </ng-template>
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Delete', $event.item)">
+                   (execute)="deleteItem($event.item)">
         <i class="fa fa-trash">&nbsp;</i> Delete
       </ng-template>
-      <!--<ng-template contextMenuItem-->
-                   <!--[visible]="true"-->
-                   <!--[enabled]="true"-->
-                   <!--(execute)="showCopyMessage('Copy', $event.item)">-->
-        <!--<a data-position="toast-top-full-width"></a>-->
-        <!--<i class="fa fa-copy">&nbsp;</i> Copy-->
-      <!--</ng-template>-->
       <ng-template contextMenuItem [divider]="true"></ng-template>
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Create', $event.item)">
+                   (execute)="createItem($event.item, true)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #666666">PROJECT</span>
       </ng-template>
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Create', $event.item)">
+                   (execute)="createItem($event.item, false)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #975837">PHASE</span>
       </ng-template>
     </context-menu>
