--- a/kontext/src/app/header/header.component.html
+++ b/kontext/src/app/header/header.component.html
@@ -38,7 +38,22 @@
             </a>
           </form>
         </li>
+        <li>
+          <!-- Filter Toggle-->
+          <form class="navbar-item">
+            <a class="btn btn-icon-toggle ink-reaction" id="headerToolToggle" title="filter"
+               href="javascript: void(0);" data-toggle="dropdown">
+                <i class="fa fa-wrench fa-2x" style="color:#8d8c89"></i>
+            </a>
+            <ul class="dropdown-menu animation-dock">
+              <li><a href="#"><i class="fa fa-gear"></i> Air Perm Calculator</a></li>
+              <!--<li class="divider"></li>-->
+              <li><a href="#"><i class="fa fa-gear"></i> Safety Factor Calculator</a></li>
+          </ul><!--end .dropdown-menu -->
+          </form>
+        </li>
       </ul>
+
       <ul class="header-nav header-nav-profile">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
