--- a/kontext/src/app/crud/forms/project.component.html
+++ b/kontext/src/app/crud/forms/project.component.html
@@ -1,3 +1,5 @@
+
+<!-- CREATE MODAL-->
 <div class="modal fade"
      id="projectCreateModal"
      tabindex="-1"
@@ -9,13 +11,13 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title" id="formModalLabel">Login to continue</h4>
+        <h4 class="modal-title" id="projectCreateForm">Create A New KTEK Project</h4>
       </div>
       <form class="form-horizontal" role="form">
         <div class="modal-body">
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="pr_name" class="control-label">Name: </label>
+              <label for="pr_name" class="control-label" style="font-weight: bold; color: black">*Name </label>
             </div>
             <div class="col-sm-9">
               <input type="text" name="project_name" id="pr_name" class="form-control" placeholder="Project Name">
@@ -33,7 +35,7 @@
           </div>
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="pr_type" class="control-label">Project Type</label>
+              <label for="pr_type" class="control-label" style="font-weight: bold; color: black;">*Project Type</label>
             </div>
             <div class="col-sm-9">
               <select name="pr_type" class="form-control" id="pr_type">
@@ -73,8 +75,188 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Login</button>
+          <button type="button" class="btn btn-default pull-left"
+                  style="background-color: #e24c42; color: #ffffff;" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #00a55e; color: #ffffff">Create and Add Project Phase</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #74acc5; color: #ffffff">Create and Add Another</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #358bb8; color: #ffffff">Create</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- EDIT MODAL -->
+<div class="modal fade"
+     id="projectEditModal"
+     tabindex="-1"
+     role="dialog"
+     aria-labelledby="formModalLabel"
+     aria-hidden="true"
+     style="display: none;">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="formModalLabel">Edit Project:</h4>
+      </div>
+      <form class="form-horizontal" role="form">
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_name_edit" class="control-label" style="font-weight: bold; color: black;">*Name </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="project_name" id="pr_name_edit" class="form-control" placeholder="Project Name">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_number_edit" class="control-label">Number</label>
+            </div>
+            <div class="col-sm-9">
+              <input type="number" name="pr_number" id="pr_number_edit" class="form-control" placeholder="Project Number">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_type_edit" class="control-label" style="font-weight: bold; color: black;">*Project Type</label>
+            </div>
+            <div class="col-sm-9">
+              <select name="pr_type" class="form-control" id="pr_type_edit">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="description_edit" class="control-label">Description: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="description" id="description_edit" class="form-control" placeholder="Description">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="customer_edit" class="control-label">Customer: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="customer" id="customer_edit" class="form-control" placeholder="Customer">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="tag_edit" class="control-label">Tag: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="tag" id="tag_edit" class="form-control" placeholder="Tag">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+           <button type="button" class="btn btn-default pull-left"
+                  style="background-color: #e24c42; color: #ffffff;" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #74acc5; color: #ffffff">Save and Continue Editing</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #358bb8; color: #ffffff">Update</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- DELETE MODAL -->
+<div class="modal fade"
+     id="projectDeleteModal"
+     tabindex="-1"
+     role="dialog"
+     aria-labelledby="formModalLabel"
+     aria-hidden="true"
+     style="display: none;">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="projectDeleteLabel">Delete Project:</h4>
+      </div>
+      <form class="form-horizontal" role="form">
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_name_delete" class="control-label" style="font-weight: bold; color: black;">*Name </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="project_name" id="pr_name_delete" class="form-control" placeholder="Project Name" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_number_delete" class="control-label">Number</label>
+            </div>
+            <div class="col-sm-9">
+              <input type="number" name="pr_number" id="pr_number_delete" class="form-control" placeholder="Project Number" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_type_delete" class="control-label" style="font-weight: bold; color: black;">*Project Type</label>
+            </div>
+            <div class="col-sm-9">
+              <select name="pr_type" class="form-control" id="pr_type_delete" disabled>
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="description_edit" class="control-label">Description: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="description" id="description_delete" class="form-control" placeholder="Description" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="customer_delete" class="control-label">Customer: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="customer" id="customer_delete" class="form-control" placeholder="Customer" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="tag_delete" class="control-label">Tag: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="tag" id="tag_delete" class="form-control" placeholder="Tag" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+           <button type="button" class="btn btn-default pull-left"
+                   data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-default"
+                  style="background-color: #e24c42; color: #ffffff">Delete</button>
         </div>
       </form>
     </div>
