--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -1,11 +1,7 @@
 <!-- BEGIN MENUBAR-->
 <div id="menubar" class="menubar-inverse">
-  <!--<div class="menubar-fixed-panel">-->
-    <!--<div class="expanded">-->
-    <!--</div>-->
-  <!--</div>-->
   <div class="menubar-fixed-panel">
-      <div>
+    <div>
       </div>
       <div class="expanded">
         <a href="#">
@@ -131,17 +127,18 @@
     <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="example-tree">
       <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
         <li class="mat-tree-node" style="margin-left: 35px;">
-          <a disabled><i class="fa fa-circle-o fa-2x"></i></a>
-          <span class="title menu-label" *ngIf="node.type == 'project'"  [contextMenu]="projectMenu" [contextMenuSubject]="node">{{node.name}}</span>
-          <span class="title menu-label" *ngIf="node.type == 'phase'" [contextMenu]="phaseMenu" [contextMenuSubject]="node">{{node.name}}</span>
-          <span class="title menu-label" *ngIf="node.type == 'design'" [contextMenu]="designMenu" [contextMenuSubject]="node">{{node.name}}</span>
-          <span class="title menu-label" *ngIf="node.type == 'spec'" [contextMenu]="specMenu" [contextMenuSubject]="node">{{node.name}}</span>
+          <a (click)="log(node)" disabled><i class="fa fa-circle-o fa-2x"></i>
+            <span class="title menu-label" *ngIf="node.type == 'project'"  [contextMenu]="projectMenu" [contextMenuSubject]="node">{{node.name}}</span>
+            <span class="title menu-label" *ngIf="node.type == 'phase'" [contextMenu]="phaseMenu" [contextMenuSubject]="node">{{node.name}}</span>
+            <span class="title menu-label" *ngIf="node.type == 'design'" [contextMenu]="designMenu" [contextMenuSubject]="node">{{node.name}}</span>
+            <span class="title menu-label" *ngIf="node.type == 'spec'" [contextMenu]="specMenu" [contextMenuSubject]="node">{{node.name}}</span>
+          </a>
         </li>
       </mat-tree-node>
       <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
         <li>
           <div class="mat-tree-node" style="margin-left: 35px;">
-            <a  matTreeNodeToggle
+            <a  matTreeNodeToggle (click)="log(node)"
                     [attr.aria-label]="'toggle ' + node.filename">
               <i *ngIf="nestedTreeControl.isExpanded(node)" class="fa fa-angle-down fa-2x"></i>
               <i *ngIf="!nestedTreeControl.isExpanded(node)" class="fa fa-angle-right fa-2x"></i>
@@ -247,13 +244,13 @@
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="createItem($event.item, true)">
+                   (execute)="createItem($event.item, sibling=true)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #666666">PROJECT</span>
       </ng-template>
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="createItem($event.item, false)">
+                   (execute)="createItem($event.item, sibling=false)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #975837">PHASE</span>
       </ng-template>
     </context-menu>
