need to flesh out new routes for detail pages, /kontext/project/:id/detail type deal.

--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -1,84 +1,11 @@
-
-
-<!-- BEGIN CONTENT-->
-<div id="content">
-  <div class="row">
-    <div id="col-xs-offset-3 col-xs-9">
-      <div class='col-xs-12' style="background-color: #ffffff; height: 47px; padding: 5px; padding-right: 20px; ">
-        <div class="col-xs-1 col-xs-offset-2">
-          <button class="btn btn-default-bright ink-reaction" style="padding: 5px; border: none;">
-            <span class="tool-title">
-              <i class="fa fa-home fa-lg pull-left"></i>
-            </span>
-          </button>
-        </div>
-        <div class="col-xs-1 pull-right">
-          <button class="btn btn-default-bright ink-reaction" style="padding: 5px; width: 100%; border: none;">
-            <span class="tool-title">
-              <i class="fa fa-gear fa-lg pull-left"></i>
-              A.P.C.
-            </span>
-          </button>
-        </div>
-        <div class="col-xs-1 pull-right">
-          <button class="btn btn-default-bright ink-reaction" style="padding: 5px; width: 100%; border: none;">
-            <span class="tool-title" >
-              <i class="fa fa-gear fa-lg pull-left"></i>
-              S.F.
-            </span>
-          </button>
-        </div>
-      </div>
-    </div>
+<!-- BEGIN CONTENT ROUTE-->
+<div class="content" style="margin-top: 75px;">
+  <div class="container col-xs-10 col-xs-offset-2">
+    <!--<button class="btn btn-primary" (click)="log()">Log</button>-->
+    <router-outlet></router-outlet>
   </div>
 </div>
-<!-- END CONTENT -->
-<div class="container col-xs-10 col-xs-offset-2">
-  <h2 class="text-light text-center">KTEK Home<br><small class="text-primary">Kenda Tire Engineering Kit</small></h2>
-
-  <div class="col-xs-10 col-xs-offset-1" style="margin-top: 25px;">
-    <div class="card">
-      <div class="card-head">
-        <header>KTEK Usage Metrics </header>
-      </div>
-      <div class="card-body">
-          <div class="stick-bottom-right">
-          </div>
-      </div><!--end .card-body -->
-    </div><!--end .card -->
-  </div>
-  <div class="col-xs-10 col-xs-offset-1" >
-    <div class="card">
-      <div class="card-head">
-        <header>Analysis Queue </header>
-      </div>
-      <div class="card-body">
-          <div class="stick-bottom-right">
-          </div>
-      </div><!--end .card-body -->
-    </div><!--end .card -->
-  </div>
-  <div class="col-xs-10 col-xs-offset-1" >
-    <div class="card">
-      <div class="card-head">
-        <header>New KTEK Features</header>
-      </div>
-      <div class="card-body">
-          <ul>
-            <li>Quicker Index Page Loading</li>
-            <li>Better Filtering</li>
-            <li>More Robust Job-Tracking</li>
-            <li>Tool Integration</li>
-          </ul>
-          <div class="stick-bottom-right">
-          </div>
-      </div><!--end .card-body -->
-    </div><!--end .card -->
-  </div>
-</div>
-
-
-
+<!-- END CONTENT ROUTE -->
 
 <!-- BEGIN OFFCANVAS RIGHT -->
 <div class="offcanvas">
@@ -96,7 +23,7 @@
     </div>
   </div>
 </div>
- <!--END OFFCANVAS RIGHT-->
+<!--END OFFCANVAS RIGHT-->
 
 
 
