--- a/kontext/src/app/header/header.component.html
+++ b/kontext/src/app/header/header.component.html
@@ -8,6 +8,9 @@
            <img src="../../assets/img/kenda-vector-logo.png" style="width: 200px; margin-left: 125px;">
           </div>
         </li>
+        <li>
+          <a [routerLink]="['/details']">DETAILS</a>
+        </li>
       </ul>
     </div>
     <div class="headerbar-right">
