fleshing out CRUD modals

--- a/kontext/src/app/content/details/project-details.component.html
+++ b/kontext/src/app/content/details/project-details.component.html
@@ -1,3 +1,10 @@
+<div class="section-header">
+  <ol class="breadcrumb">
+    <li><a routerLink="/home">home</a></li>
+    <li class="active">{{project.name}}</li>
+  </ol>
+</div>
+
 <h2 class="text-light text-center">
   {{project.name}}<br><small class="text-primary">
   Project-Details</small></h2>
