--- a/kontext/src/app/content/home/home.component.html
+++ b/kontext/src/app/content/home/home.component.html
@@ -1,3 +1,9 @@
+<div class="section-header">
+  <ol class="breadcrumb">
+    <!--<li><a routerLink="/home">home</a></li>-->
+    <li class="active">home</li>
+  </ol>
+</div>
 
 <h2 class="text-light text-center">KTEK Home<br><small class="text-primary">Kenda Tire Engineering Kit</small></h2>
 
