--- a/kontext/src/app/crud/crud.component.html
+++ b/kontext/src/app/crud/crud.component.html
@@ -1,4 +1,4 @@
 <project-crud></project-crud>
-<!--<phase-crud></phase-crud>-->
-<!--<design-crud></design-crud>-->
-<!--<spec-crud></spec-crud>-->
+<phase-crud></phase-crud>
+<design-crud></design-crud>
+<spec-crud></spec-crud>
