--- a/kontext/src/app/menu/menu.component.html
+++ b/kontext/src/app/menu/menu.component.html
@@ -30,7 +30,6 @@
 
     </ul>
 
-    <!--<div *ngIf="showProjectTree()">-->
     <div *ngIf="nestedDataSource.data">
       <ul id="project-menu" class="gui-controls" style="margin-bottom: -15px;">
         <li style="margin: 0">
@@ -296,13 +295,13 @@
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Create', $event.item)">
+                   (execute)="createItem($event.item, sibling=true)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #975837">PHASE</span>
       </ng-template>
       <ng-template contextMenuItem
                    [visible]="true"
                    [enabled]="true"
-                   (execute)="showMessage('Create', $event.item)">
+                   (execute)="createItem($event.item, sibling=false)">
         <i class="fa fa-plus">&nbsp;</i> Create New <span style="font-weight: bold; color: #319644">DESIGN</span>
       </ng-template>
 </context-menu>
