--- a/kontext/src/app/crud/forms/design.component.html
+++ b/kontext/src/app/crud/forms/design.component.html
@@ -1,3 +1,323 @@
-<p>
-  crud works!
-</p>
+
+<!-- CREATE MODAL-->
+<div class="modal fade"
+     id="designCreateModal"
+     tabindex="-1"
+     role="dialog"
+     aria-labelledby="formModalLabel"
+     aria-hidden="true"
+     style="display: none;">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 class="modal-title" id="phaseCreateForm">Create A New Tire Design</h3>
+        <p class="text-muted"><span class="text-primary" style="font-weight: bold;">*required</span>/optional</p>
+      </div>
+      <form class="form-horizontal" role="form">
+        <div class="modal-body">
+
+          <!-- PROJECT -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="pr_name" class="text-primary-dark" style="font-weight: bold;">*Project</label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="project_name" id="pr_name" class="form-control" placeholder="Project Name" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+
+          <!-- PHASE -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="ph_name" class="text-primary-dark" style="font-weight: bold;">*Phase</label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" name="project_name" id="ph_name" class="form-control" placeholder="Phase Name" disabled>
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+
+          <!-- TIRE TYPE -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="d_type" class="text-primary" style="font-weight: bold;">*Tire Type</label>
+            </div>
+            <div class="col-sm-9">
+              <select class="form-control" id="d_type">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- TIRE LINE -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="line" class="text-primary" style="font-weight: bold;">*Tire Line</label>
+            </div>
+            <div class="col-sm-9">
+              <select class="form-control" id="line">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- SIZE -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="size" class="text-primary" style="font-weight: bold;">*Size: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" id="size" class="form-control" placeholder="Tire Size">
+            </div>
+          </div>
+
+          <!-- SPEED RATING -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="speed_rating" class="control-label">Speed Rating: </label>
+            </div>
+            <div class="col-sm-9">
+              <select  class="form-control" id="speed_rating">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+
+          <!--LOAD RATING-->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="load_rating" class="control-label">Load Rating: </label>
+            </div>
+            <div class="col-sm-9">
+              <select  class="form-control" id="load_rating">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- REGION -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="region" class="control-label">Region: </label>
+            </div>
+            <div class="col-sm-9">
+              <select  class="form-control" id="region">
+                <option> &nbsp;</option>
+                <option>Replacement</option>
+                <option>OE</option>
+                <option>Research</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- FACTORY -->
+          <div class="form-group">
+            <div class="col-sm-3">
+              <label for="factory" class="control-label">Factory: </label>
+            </div>
+            <div class="col-sm-9">
+              <select  class="form-control" id="factory">
+              <option> &nbsp;</option>
+              <option>Replacement</option>
+              <option>OE</option>
+              <option>Research</option>
+            </select>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-success-dark">Create and Add Project Phase</button>
+          <button type="button" class="btn btn-accent">Create and Add Another</button>
+          <button type="button" class="btn btn-accent-dark">Create</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!--&lt;!&ndash; EDIT MODAL &ndash;&gt;-->
+<!--<div class="modal fade"-->
+     <!--id="projectEditModal"-->
+     <!--tabindex="-1"-->
+     <!--role="dialog"-->
+     <!--aria-labelledby="formModalLabel"-->
+     <!--aria-hidden="true"-->
+     <!--style="display: none;">-->
+  <!--<div class="modal-dialog modal-lg">-->
+    <!--<div class="modal-content">-->
+      <!--<div class="modal-header">-->
+        <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+        <!--<h4 class="modal-title" id="formModalLabel">Edit Project:</h4>-->
+      <!--</div>-->
+      <!--<form class="form-horizontal" role="form">-->
+        <!--<div class="modal-body">-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_name_edit" class="text-primary" style="font-weight: bold;">*Name </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="project_name" id="pr_name_edit" class="form-control" placeholder="Project Name">-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_number_edit" class="control-label">Number</label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="number" name="pr_number" id="pr_number_edit" class="form-control" placeholder="Project Number">-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_type_edit" class="text-primary" style="font-weight: bold;">*Project Type</label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<select name="pr_type" class="form-control" id="pr_type_edit">-->
+                <!--<option> &nbsp;</option>-->
+                <!--<option>Replacement</option>-->
+                <!--<option>OE</option>-->
+                <!--<option>Research</option>-->
+              <!--</select>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="description_edit" class="control-label">Description: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="description" id="description_edit" class="form-control" placeholder="Description">-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="customer_edit" class="control-label">Customer: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="customer" id="customer_edit" class="form-control" placeholder="Customer">-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="tag_edit" class="control-label">Tag: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="tag" id="tag_edit" class="form-control" placeholder="Tag">-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="modal-footer">-->
+          <!--<button type="button" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>-->
+          <!--<button type="button" class="btn btn-accent">Save and Continue Editing</button>-->
+          <!--<button type="button" class="btn btn-accent-dark">Update</button>-->
+        <!--</div>-->
+      <!--</form>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<!--&lt;!&ndash; DELETE MODAL &ndash;&gt;-->
+<!--<div class="modal fade"-->
+     <!--id="projectDeleteModal"-->
+     <!--tabindex="-1"-->
+     <!--role="dialog"-->
+     <!--aria-labelledby="formModalLabel"-->
+     <!--aria-hidden="true"-->
+     <!--style="display: none;">-->
+  <!--<div class="modal-dialog modal-lg">-->
+    <!--<div class="modal-content">-->
+      <!--<div class="modal-header">-->
+        <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+        <!--<h4 class="modal-title" id="projectDeleteLabel">Delete Project:</h4>-->
+      <!--</div>-->
+      <!--<form class="form-horizontal" role="form">-->
+        <!--<div class="modal-body">-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_name_delete" class="text-primary" style="font-weight: bold;">*Name </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="project_name" id="pr_name_delete" class="form-control" placeholder="Project Name" disabled>-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_number_delete" class="control-label">Number</label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="number" name="pr_number" id="pr_number_delete" class="form-control" placeholder="Project Number" disabled>-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="pr_type_delete" class="text-primary" style="font-weight: bold;">*Project Type</label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<select name="pr_type" class="form-control" id="pr_type_delete" disabled>-->
+                <!--<option> &nbsp;</option>-->
+                <!--<option>Replacement</option>-->
+                <!--<option>OE</option>-->
+                <!--<option>Research</option>-->
+              <!--</select>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="description_edit" class="control-label">Description: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="description" id="description_delete" class="form-control" placeholder="Description" disabled>-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="customer_delete" class="control-label">Customer: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="customer" id="customer_delete" class="form-control" placeholder="Customer" disabled>-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <!--<div class="col-sm-3">-->
+              <!--<label for="tag_delete" class="control-label">Tag: </label>-->
+            <!--</div>-->
+            <!--<div class="col-sm-9">-->
+              <!--<input type="text" name="tag" id="tag_delete" class="form-control" placeholder="Tag" disabled>-->
+              <!--<div class="form-control-line"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="modal-footer">-->
+           <!--<button type="button" class="btn btn-default pull-left"-->
+                   <!--data-dismiss="modal">Cancel</button>-->
+          <!--<button type="button" class="btn btn-danger">Delete</button>-->
+        <!--</div>-->
+      <!--</form>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+
