--- a/kontext/src/app/crud/forms/phase.component.html
+++ b/kontext/src/app/crud/forms/phase.component.html
@@ -11,7 +11,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 class="modal-title" id="phaseCreateForm">Create A Project</h3>
+        <h3 class="modal-title" id="phaseCreateForm">Create A New Phase</h3>
         <p class="text-muted"><span class="text-primary" style="font-weight: bold;">*required</span>/optional</p>
       </div>
       <form class="form-horizontal" role="form">
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="ph_name" class="text-primary">*Name</label>
+              <label for="ph_name" class="text-primary" style="font-weight: bold;">*Name</label>
             </div>
             <div class="col-sm-9">
               <input type="text" name="ph_name" id="ph_name" class="form-control" placeholder="Phase Name">
