Authentication is working, structure is not great, need to reformulate some stuff.

--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -2,13 +2,13 @@
 <div class="content" style="margin-top: 75px;">
   <div class="container col-xs-10 col-xs-offset-2">
     <!--<button class="btn btn-primary" (click)="log()">Log</button>-->
-    <router-outlet></router-outlet>
+    <!--<router-outlet></router-outlet>-->
   </div>
 </div>
 <!-- END CONTENT ROUTE -->
 
-<!-- BEGIN OFFCANVAS RIGHT -->
-<div class="offcanvas">
+<!--&lt;!&ndash; BEGIN OFFCANVAS RIGHT &ndash;&gt;-->
+<div class="offcanvas" id="filterOffCanvas">
   <div id="offcanvas-right" class="offcanvas-pane width-12">
     <div class="offcanvas-head">
       <header>Project Filter</header>
