--- a/kontext/src/app/base/base.component.html
+++ b/kontext/src/app/base/base.component.html
@@ -1,4 +1,5 @@
 <div id="base" *ngIf="loggedIn.value">
+<!--<div id="base">-->
   <app-header></app-header>
 
   <!-- BEGIN OFFCANVAS LEFT -->
@@ -15,6 +16,5 @@
 
 </div>
 <div *ngIf="!loggedIn.value">
-  <router-outlet></router-outlet>
-
+  <app-login></app-login>
 </div>
