--- a/kontext/src/app/login/login.component.html
+++ b/kontext/src/app/login/login.component.html
@@ -16,7 +16,6 @@
                      id="username"
                      class="form-control">
                <label for="username">UserName </label>
-              <!--<div class="form-control-line"></div>-->
             </div>
             <div class="form-group">
               <input type="password"
@@ -30,12 +29,11 @@
             <br>
             <div class="text-right">
               <button class="btn btn-primary btn-raised" (click)="onLoginClick()">Login</button>
-            </div><!--end .col -->
-            <!--end .row -->
+            </div>
           </form>
-        </div><!--end .col -->
-          </div><!--end .row -->
-    </div><!--end .card-body -->
-  </div><!--end .card -->
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
