reworking and restructuring the site on this branch! --> just started!

--- a/kontext/src/app/app.component.html
+++ b/kontext/src/app/app.component.html
@@ -1,4 +1,9 @@
 <ngx-toasta [position]="'bottom-fullwidth'"></ngx-toasta>
 
-<app-base></app-base>
-
+<!--<app-base></app-base>-->
+<app-nav></app-nav>
+<app-help></app-help>
+<app-project-tree></app-project-tree>
+<app-content></app-content>
+<app-filter></app-filter>
+<router-outlet></router-outlet>
